--- a/Activity3/UstunBildiren-Activity3.html
+++ b/Activity3/UstunBildiren-Activity3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Activity3 - Page Layout</title>
-	<link rel="stylesheet" type="text/css" href="UstinBildiren-Activity3.css">
+	<link rel="stylesheet" type="text/css" href="UstunBildiren-Activity3.css">
 </head>
 <body>
 
