--- a/UstBilTourismProject/tours.html
+++ b/UstBilTourismProject/tours.html
@@ -3,7 +3,7 @@
 
 
 <head>
-<title>UstBil Tourism</title>
+<title>UstBil Tourism - Tours</title>
 
 <meta charset="utf-8">
 <link rel="shortcut icon" type="image/png" href="image/favicon.ico"/>
@@ -28,10 +28,15 @@
     </header>
 
     <main>
-    <div class="main">
-    <h3>This is the Home page</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam minus eveniet recusandae dicta similique numquam voluptas quos tempore cupiditate pariatur, laudantium fugit alias quia veritatis nesciunt quaerat molestias adipisci assumenda.</p>
-    </div>    
+    <div class="toursmain">
+        <h1>This is the Tours Page</h1>
+        <h3>Our page looks like a virtual construction site right now! Don't worry, there's a lot of work going on behind the scenes and we'll be ready to bring you great content soon. Stay tuned!</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc cursus viverra fermentum. Morbi ut placerat lorem. Sed ultrices dictum viverra. Etiam luctus, orci pretium aliquam dapibus, ipsum erat eleifend ex, eget eleifend justo nisi quis dolor. Duis sagittis, justo non pulvinar interdum, ante tellus semper augue, efficitur auctor lacus tortor nec mauris. Sed a diam eget lectus accumsan imperdiet eget a nisi. In eget sagittis est. Phasellus vitae tortor vitae ante eleifend sodales.</p>
+        <p>Donec turpis libero, sodales ac commodo ac, tincidunt ut mauris. Morbi eget nisi ac purus pretium fringilla. Phasellus dictum justo leo, in rhoncus lacus condimentum sed. Phasellus sit amet interdum purus, a molestie sapien. Quisque dolor elit, ullamcorper eu consectetur et, egestas sed turpis. Praesent a ultrices neque. Aenean elementum finibus urna, ut rhoncus turpis ullamcorper sit amet. Aliquam sodales eros in magna posuere dictum. Vivamus hendrerit convallis finibus. Cras volutpat aliquam sapien, nec vehicula ex sodales eu. Donec at libero feugiat, elementum lectus et, convallis dolor.</p>
+        <p>Etiam lacinia efficitur eleifend. Donec vulputate sagittis dapibus. Donec et nibh id neque mattis dictum non in arcu. Cras commodo a purus ac fringilla. Cras pharetra dui metus, quis efficitur mauris feugiat nec. Pellentesque auctor nec nunc consequat hendrerit. Praesent accumsan sodales nisl non congue. Curabitur at urna id urna posuere accumsan.</p>
+        <p>Cras porta, odio nec lacinia viverra, enim odio tristique libero, id porttitor mauris lectus vitae leo. Proin accumsan urna orci, a hendrerit odio posuere non. Cras vel nisl vitae mi elementum sodales. Donec ut tincidunt massa. Morbi porttitor eros sit amet nibh finibus, id pharetra ipsum lacinia. Sed convallis magna sit amet mauris facilisis volutpat. Mauris placerat, magna in varius consequat, quam erat aliquam nibh, vitae viverra augue ligula non erat. Duis sed dapibus nisi, in accumsan enim. Pellentesque egestas pharetra arcu ac luctus. Nunc a erat vel nunc tincidunt finibus. Nullam a molestie tellus, ac iaculis nisl.</p>
+        <p>Fusce nunc sapien, euismod eget erat a, iaculis egestas orci. Donec ac vehicula orci. Aenean mattis vehicula eros vitae consectetur. Nam sapien ligula, fermentum et vulputate vel, dignissim sit amet lacus. Pellentesque non augue mattis, vulputate est vel, feugiat enim. Donec sit amet nisl magna. Quisque vel consequat eros. Nulla et libero et tellus tincidunt scelerisque.</p>
+        </div>       
     </main>
 
     <footer class="footer">
@@ -77,4 +82,3 @@
 
         
 </body>
-
