--- a/UstBilTourismProject/index.html
+++ b/UstBilTourismProject/index.html
@@ -40,17 +40,17 @@
     <div class="toursinfo">
         <section>
             <h2>Mersin Turları</h2>
-            <img src="mersin.jpg" alt="Mersin">
+            <img src="image/mersin.jpg" alt="Mersin">
             <p>Discover the beauties of Mersin!</p>
         </section>
         <section>
             <h2>Muğla Turları</h2>
-            <img src="mugla.jpg" alt="Muğla">
+            <img src="image/mugla.jpg" alt="Muğla">
             <p>Discover the beauties of Muğla!</p>
         </section>
         <section>
             <h2>Antalya Turları</h2>
-            <img src="antalya.jpg" alt="Antalya">
+            <img src="image/antalya.jpg" alt="Antalya">
             <p>Discover the beauties of Antalya!</p>
         </section>
     </div>
