--- a/InClassActivity10/UstunBildiren-Activity10Widget/index.html
+++ b/InClassActivity10/UstunBildiren-Activity10Widget/index.html
@@ -27,6 +27,7 @@
 <body>
 	<main>
 		<h1>Reservation Request</h1>
+		<form id="reservation_form" action="response.html">
 		<div id="tabs">
 			<ul>
 				<li><a href="#general">General Information</a></li>
