--- a/UstBilTourismProject/faq.html
+++ b/UstBilTourismProject/faq.html
@@ -7,8 +7,12 @@
 
 <meta charset="utf-8">
 <link rel="shortcut icon" type="image/png" href="image/favicon.ico"/>
+<link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+ <script src="faq.js"></script>
 </head>
 
 <body>
