--- a/UstBilTourismProject/tours.html
+++ b/UstBilTourismProject/tours.html
@@ -3,12 +3,15 @@
 
 
 <head>
-<title>UstBil Tourism - Tours</title>
+    <title>UstBil Tourism - Tours</title>
 
-<meta charset="utf-8">
-<link rel="shortcut icon" type="image/png" href="image/favicon.ico"/>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/png" href="image/favicon.ico" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link href="style.css" rel="stylesheet">
+    <link href="jquery.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -28,15 +31,69 @@
     </header>
 
     <main>
-    <div class="toursmain">
-        <h1>This is the Tours Page</h1>
-        <h3>Our page looks like a virtual construction site right now! Don't worry, there's a lot of work going on behind the scenes and we'll be ready to bring you great content soon. Stay tuned!</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc cursus viverra fermentum. Morbi ut placerat lorem. Sed ultrices dictum viverra. Etiam luctus, orci pretium aliquam dapibus, ipsum erat eleifend ex, eget eleifend justo nisi quis dolor. Duis sagittis, justo non pulvinar interdum, ante tellus semper augue, efficitur auctor lacus tortor nec mauris. Sed a diam eget lectus accumsan imperdiet eget a nisi. In eget sagittis est. Phasellus vitae tortor vitae ante eleifend sodales.</p>
-        <p>Donec turpis libero, sodales ac commodo ac, tincidunt ut mauris. Morbi eget nisi ac purus pretium fringilla. Phasellus dictum justo leo, in rhoncus lacus condimentum sed. Phasellus sit amet interdum purus, a molestie sapien. Quisque dolor elit, ullamcorper eu consectetur et, egestas sed turpis. Praesent a ultrices neque. Aenean elementum finibus urna, ut rhoncus turpis ullamcorper sit amet. Aliquam sodales eros in magna posuere dictum. Vivamus hendrerit convallis finibus. Cras volutpat aliquam sapien, nec vehicula ex sodales eu. Donec at libero feugiat, elementum lectus et, convallis dolor.</p>
-        <p>Etiam lacinia efficitur eleifend. Donec vulputate sagittis dapibus. Donec et nibh id neque mattis dictum non in arcu. Cras commodo a purus ac fringilla. Cras pharetra dui metus, quis efficitur mauris feugiat nec. Pellentesque auctor nec nunc consequat hendrerit. Praesent accumsan sodales nisl non congue. Curabitur at urna id urna posuere accumsan.</p>
-        <p>Cras porta, odio nec lacinia viverra, enim odio tristique libero, id porttitor mauris lectus vitae leo. Proin accumsan urna orci, a hendrerit odio posuere non. Cras vel nisl vitae mi elementum sodales. Donec ut tincidunt massa. Morbi porttitor eros sit amet nibh finibus, id pharetra ipsum lacinia. Sed convallis magna sit amet mauris facilisis volutpat. Mauris placerat, magna in varius consequat, quam erat aliquam nibh, vitae viverra augue ligula non erat. Duis sed dapibus nisi, in accumsan enim. Pellentesque egestas pharetra arcu ac luctus. Nunc a erat vel nunc tincidunt finibus. Nullam a molestie tellus, ac iaculis nisl.</p>
-        <p>Fusce nunc sapien, euismod eget erat a, iaculis egestas orci. Donec ac vehicula orci. Aenean mattis vehicula eros vitae consectetur. Nam sapien ligula, fermentum et vulputate vel, dignissim sit amet lacus. Pellentesque non augue mattis, vulputate est vel, feugiat enim. Donec sit amet nisl magna. Quisque vel consequat eros. Nulla et libero et tellus tincidunt scelerisque.</p>
-        </div>       
+        <div class="toursmain">
+            <div class="toursantalya">
+                <h1>Antalya</h1>
+                <p>Antalya, tarih, doğa ve denizin muhteşem bir buluşmasıdır. Şehir, tarihi dokusuyla ünlü Kaleiçi
+                    bölgesinden, mistik güzellikteki Düden Şelalesi'ne kadar birçok gezilecek yere ev sahipliği yapar.
+                    Kaleiçi'nde Osmanlı ve Selçuklu dönemlerinden kalma tarihi yapılar ve dar sokaklar sizi geçmişe
+                    götürürken, Antalya'nın sembolü olan Hadrian Kapısı da burada bulunur. Antik şehirleri keşfetmek
+                    isteyenler için Termessos ve Perge gibi önemli arkeolojik alanlar da ziyaret edilebilir. Ayrıca,
+                    doğa harikası Köprülü Kanyon Milli Parkı ve Olimpos Antik Kenti'nin yanı sıra, Kemer'deki Phaselis
+                    Antik Kenti de tarih ve doğa tutkunlarını cezbetmektedir. Antalya'nın turkuaz sularıyla ünlü
+                    plajları da dinlenmek ve eğlenmek için idealdir. Antalya'yı ziyaret edenler, hem tarihi hem de doğal
+                    güzellikleri bir arada deneyimleyerek unutulmaz bir tatil geçirebilirler.</p>
+                <ul id="slider1">
+                    <li><img src="image/antalya-1.jpg" alt="" title="antalya"></li>
+                    <li><img src="image/antalya-2.jpg" alt="" title="antalya"></li>
+                    <li><img src="image/antalya-3.jpg" alt="" title="antalya"></li>
+                </ul>
+                <p id="pager1"></p>
+                <div id="pageIndicator" class="page-indicator"></div>
+            </div>
+            <div class="toursmersin">
+                <h1>Mersin</h1>
+                <p>Mersin, Akdeniz'in sıcak sularıyla kucaklaşan ve tarihle doğanın iç içe geçtiği bir şehirdir. Silifke
+                    Kalesi, tarihi MÖ 3. yüzyıla dayanan ve Silifke'nin simgelerinden biridir. Muhteşem manzarasıyla
+                    ziyaretçileri etkilerken, Cennet-Cehennem Mağaraları ise Toros Dağları'nın eteklerinde doğal
+                    oluşumlarıyla dikkat çeker. Kızkalesi, Erdemli ilçesindeki tarihi bir kale olup, Akdeniz'in
+                    kıyısında konumlanmıştır ve hikayesiyle eşsiz manzarası ziyaretçilerini büyüler. Mersin'in Mezitli
+                    ilçesinde bulunan Ancient City of Soli-Pompeipolis ise Helenistik ve Roma dönemlerine ait
+                    kalıntılarıyla tarih tutkunlarını cezbeder. Tarsus'un hemen dışında yer alan Tarsus Şelalesi, serin
+                    suları ve yeşil çevresiyle huzurlu bir kaçış sunarken, Tarsus'taki Atatürk Evi ve Müzesi,
+                    Türkiye'nin kurucusu Mustafa Kemal Atatürk'ün doğduğu evde yer alır ve ziyaretçilere Atatürk'ün
+                    yaşamına dair önemli bir izlenim sunar. Mersin, tarihi ve doğal güzellikleriyle zengin bir şehirdir
+                    ve bu yerler sadece bu güzelliklerin bir kısmını temsil etmektedir.</p>
+                <ul id="slider2">
+                    <li><img src="image/mersin-1.jpg" alt="" title="mersin-1.jpg"></li>
+                    <li><img src="image/mersin-2.jpg" alt="" title="mersin-1.jpg"></li>
+                    <li><img src="image/mersin-3.jpg" alt="" title="mersin-1.jpg"></li>
+                </ul>
+                <p id="pager2"></p>
+                <div id="pageIndicator" class="page-indicator"></div>
+            </div>
+            <div class="toursmugla">
+                <h1>Muğla</h1>
+                <p>Muğla, Ege'nin mavisine ve yeşiline sahip bir cennet köşesidir. Şehir, tarihi dokusuyla birlikte
+                    doğal güzellikleriyle de ön plana çıkar. Bodrum Kalesi, Antik çağlardan günümüze uzanan bu kale,
+                    Bodrum'un simgesidir ve tarih ile deniz manzarasını bir araya getirir. Ölüdeniz, Fethiye ilçesinde
+                    bulunan bu doğa harikası lagün, dünyanın en güzel plajları arasında gösterilir ve berrak turkuaz
+                    suyuyla ziyaretçilerini etkiler. Dalyan, Muğla'nın doğal güzelliklerinden biri olup, Kral Mezarları
+                    ve Caretta Caretta kaplumbağalarıyla ünlüdür. Marmaris Kalesi, Osmanlı döneminden kalma tarihi bir
+                    yapı olup, liman manzarası eşliğinde şehrin tarihini ziyaretçilere aktarır. Datça Yarımadası, temiz
+                    denizi ve sakin atmosferiyle bilinirken, Knidos Antik Kenti gibi tarihî zenginliklere ev sahipliği
+                    yapar. Kaunos Antik Kenti ve Dalyan Nehri, muhteşem doğa manzarasıyla tarih yolculuğu yapmak
+                    isteyenleri cezbeder. Muğla, Ege'nin incisi olan bu yerlerle dolu bir şehirdir ve her biri
+                    ziyaretçilere unutulmaz bir deneyim sunar.</p>
+                <ul id="slider3">
+                    <li><img src="image/mugla-1.jpg" alt="" title="mugla-1.jpg"></li>
+                    <li><img src="image/mugla-2.jpg" alt="" title="mugla-1.jpg"></li>
+                    <li><img src="image/mugla-3.jpg" alt="" title="mugla-1.jpg"></li>
+                </ul>
+                <p id="pager3"></p>
+                <div id="pageIndicator" class="page-indicator"></div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
@@ -49,7 +106,7 @@
                         <li><a href="tours.html">Tours</a></li>
                         <li><a href="tourcalendar.html">Tour Calender</a></li>
                         <li><a href="blog.html">Blog</a></li>
-                        
+
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -62,23 +119,28 @@
                 </div>
                 <div class="footer-col">
                     <h4>Info</h4>
-                    <p>UstBil Tourism is a tourism agency that works to make your dream travels come true. 
-                        We work to offer you the most suitable travel options with our experienced and expert team. 
-                        We attach importance to customer satisfaction and always strive to provide the best service.</p></p>
+                    <p>UstBil Tourism is a tourism agency that works to make your dream travels come true.
+                        We work to offer you the most suitable travel options with our experienced and expert team.
+                        We attach importance to customer satisfaction and always strive to provide the best service.</p>
+                    </p>
                 </div>
                 <div class="footer-col">
                     <h4>follow us</h4>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/slckstn/" target=”_blank”><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.instagram.com/bugrabildirenn/" target=”_blank”><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/slckstn/" target=”_blank”><i
+                                class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/bugrabildirenn/" target=”_blank”><i
+                                class="fab fa-instagram"></i></a>
                         <a href="https://github.com/Slckstn" target=”_blank”><i class="fab fa-github"></i></a>
                         <a href="https://github.com/bugrabildiren" target=”_blank”><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
         </div>
-   </footer>
- 
+    </footer>
 
-        
+    <script src="https://code.jquery.com/jquery-1.8.2.min.js"></script>
+    <script src="js/tours.js"></script>
+    <script src="js/jquery.js"></script>
+
 </body>
